--- a/DrawCircularProgress/Base.lproj/Main.storyboard
+++ b/DrawCircularProgress/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,8 +20,64 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0wp-B3-LD6">
+                                <rect key="frame" x="162.5" y="331" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Fu3-aF-QL4"/>
+                                    <constraint firstAttribute="height" constant="30" id="auB-f9-lpd"/>
+                                </constraints>
+                                <color key="textColor" red="0.97647058823529409" green="0.792156862745098" blue="0.0039215686274509803" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7hA-S7-FWf">
+                                <rect key="frame" x="272" y="331" width="50" height="30"/>
+                                <color key="textColor" red="0.20784313730000001" green="0.72941176470000002" blue="0.72941176470000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gOf-lM-0JI">
+                                <rect key="frame" x="137" y="386" width="100" height="30"/>
+                                <color key="backgroundColor" red="0.43529411759999997" green="0.74901960779999999" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="3rN-hg-qAM"/>
+                                </constraints>
+                                <state key="normal" title="完成">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="touchUpFinish:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IxU-Qo-7P3"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ha4-DX-nHZ">
+                                <rect key="frame" x="53" y="331" width="50" height="30"/>
+                                <color key="textColor" red="0.91372549020000005" green="0.19215686269999999" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7hA-S7-FWf" firstAttribute="width" secondItem="ha4-DX-nHZ" secondAttribute="width" id="33J-Hp-JTH"/>
+                            <constraint firstItem="0wp-B3-LD6" firstAttribute="centerY" secondItem="ha4-DX-nHZ" secondAttribute="centerY" id="3SH-Gl-d5j"/>
+                            <constraint firstItem="0wp-B3-LD6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BHz-1y-YmU"/>
+                            <constraint firstItem="0wp-B3-LD6" firstAttribute="width" secondItem="ha4-DX-nHZ" secondAttribute="width" id="J5n-M7-lQs"/>
+                            <constraint firstItem="gOf-lM-0JI" firstAttribute="top" secondItem="0wp-B3-LD6" secondAttribute="bottom" constant="25" id="Jwn-HQ-eWU"/>
+                            <constraint firstItem="7hA-S7-FWf" firstAttribute="leading" secondItem="0wp-B3-LD6" secondAttribute="trailing" constant="59.5" id="MCG-Vm-MhB"/>
+                            <constraint firstItem="7hA-S7-FWf" firstAttribute="height" secondItem="ha4-DX-nHZ" secondAttribute="height" id="RzG-6Y-WJZ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gOf-lM-0JI" secondAttribute="bottom" constant="251" id="U0j-t1-cVg"/>
+                            <constraint firstItem="0wp-B3-LD6" firstAttribute="leading" secondItem="ha4-DX-nHZ" secondAttribute="trailing" constant="59.5" id="cSE-Lh-SCE"/>
+                            <constraint firstItem="gOf-lM-0JI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cXE-sp-SHy"/>
+                            <constraint firstItem="0wp-B3-LD6" firstAttribute="height" secondItem="ha4-DX-nHZ" secondAttribute="height" id="jD7-Z6-Ofx"/>
+                            <constraint firstItem="7hA-S7-FWf" firstAttribute="centerY" secondItem="ha4-DX-nHZ" secondAttribute="centerY" id="ya6-7x-e5e"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="one" destination="ha4-DX-nHZ" id="peL-Z8-WOW"/>
+                        <outlet property="three" destination="7hA-S7-FWf" id="rjN-Oz-lC6"/>
+                        <outlet property="two" destination="0wp-B3-LD6" id="OMH-li-ERE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
